# maskdetection

./: CMakeLists.txt  README.md  face_mask.xml
lib/: CMakeLists.txt
lib/include/: FaceMaskDetector.hpp  RetCode.hpp  face_mask.hpp
lib/include/util/xml/: xmlfunc.h
lib/include/util/xml/tinyxml/: tinystr.h  tinyxml.h
lib/src/: FaceMaskDetector.cpp  face_mask.cpp
lib/src/util/xml/: xmlfunc.cpp
lib/src/util/xml/tinyxml/: tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
model/: deploy.prototxt
test/: CMakeLists.txt  main_face_mask.cpp
